--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #153677 , #4e085f);
+    background: linear-gradient(135deg, yellow , red);
     padding: 10px;
 }
 .todo-app{
@@ -19,7 +19,7 @@
     border-radius: 10px;
 }
 .todo-app h2{
-    color: #002785;
+    color: green;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -49,7 +49,7 @@ button{
     border: none;
     outline: none;
     padding: 16px 50px;
-    background: #ff5945;
+    background: blueviolet;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
